--- a/foodtaskerapp/templates/home.html
+++ b/foodtaskerapp/templates/home.html
@@ -1,3 +1,4 @@
+{% load staticfiles%}
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -5,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Home page</title>
+    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}" />
+    <link rel="stylesheet" href="{% static 'css/style.css' %}" />
+
+    <script src="{% static 'js/bootstrap.min.js' %}"></script>
   </head>
   <body>
     Hello Python Django!
