--- a/foodtaskerapp/templates/restaurant/sign_in.html
+++ b/foodtaskerapp/templates/restaurant/sign_in.html
@@ -1,17 +1,21 @@
-{% load staticfiles%}
+{% load staticfiles %}
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Home page</title>
+    <title>Login page</title>
+
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}" />
     <link rel="stylesheet" href="{% static 'css/style.css' %}" />
 
     <script src="{% static 'js/bootstrap.min.js' %}"></script>
   </head>
   <body>
-    Hello Python Django!
+    <form method="POST">
+      {% csrf_token %} {{ form }}
+      <button type="submit">Sign In</button>
+    </form>
   </body>
 </html>
