Add Registration Form

--- a/foodtaskerapp/templates/restaurant/sign_up.html
+++ b/foodtaskerapp/templates/restaurant/sign_up.html
@@ -11,6 +11,9 @@
     <script src="{% static 'js/bootstrap.min.js' %}"></script>
   </head>
   <body>
-    Restaurant sign up
+    <form method="POST" enctype="multipart/form-data">
+      {% csrf_token %} {{ user_form }} {{ restaurant_form }}
+      <button type="submit">Sign Up</button>
+    </form>
   </body>
 </html>
