--- a/foodtaskerapp/templates/restaurant/sign_in.html
+++ b/foodtaskerapp/templates/restaurant/sign_in.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Login page</title>
+    <title>foodTasker</title>
 
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}" />
     <link rel="stylesheet" href="{% static 'css/style.css' %}" />
