--- a/foodtaskerapp/templates/base.html
+++ b/foodtaskerapp/templates/base.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>foodTasker</title>
+    <title>{% block title %}{% endblock %}</title>
 
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}" />
     <link rel="stylesheet" href="{% static 'css/style.css' %}" />
@@ -13,7 +13,6 @@
     <script src="{% static 'js/bootstrap.min.js' %}"></script>
   </head>
   <body>
-    Restaurant Page
-    <a href="{% url 'restaurant-sign-out' %}">Log out</a>
+    {% block sidebar %}{% endblock %} {% block page %}{% endblock %}
   </body>
 </html>
