--- a/foodtaskerapp/templates/base.html
+++ b/foodtaskerapp/templates/base.html
@@ -1,18 +1,28 @@
 {% load staticfiles %}
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>{% block title %}{% endblock %}</title>
+<head>
+  <meta charset="UTF-8">
+  <title>{% block title %}{% endblock %}</title>
 
-    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}" />
-    <link rel="stylesheet" href="{% static 'css/style.css' %}" />
+  <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+  <link rel="stylesheet" href="{% static 'css/style.css' %}">
 
-    <script src="{% static 'js/bootstrap.min.js' %}"></script>
-  </head>
-  <body>
-    {% block sidebar %}{% endblock %} {% block page %}{% endblock %}
-  </body>
+  <script src="{% static 'js/bootstrap.min.js' %}"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+</head>
+<body>
+
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-lg-2 col-md-2 col-sm-2 sidebar">
+            {% block sidebar %}{% endblock %}
+        </div>
+        <div class="col-lg-10 col-md-10 col-sm-10 content"> 
+            {% block page %}{% endblock %}
+        </div>
+      </div>
+    </div>
+
+</body>
 </html>
