Add Restaurant List Meals Page

--- a/foodtaskerapp/static/css/style.css
+++ b/foodtaskerapp/static/css/style.css
@@ -8,6 +8,10 @@ body {
   background-color: #3f3f63;
 }
 
+.bg-gray {
+  background-color: #88A1B2;
+}
+ 
 .text-white {
   color: white;
 }
@@ -108,4 +112,14 @@ body {
 .content .panel {
   border: none;
 }
- 
+
+.table > thead > tr > th,
+.table > thead > tr > td {
+  vertical-align: middle;
+}
+
+.table,
+.table > thead > tr > th {
+  border-color: #88A1B2
+}
+
