Add Restaurant Edit Meals Page

--- a/foodtaskerapp/templates/restaurant/meal.html
+++ b/foodtaskerapp/templates/restaurant/meal.html
@@ -27,7 +27,7 @@
                     {% for meal in meals %}
                         <tr>
                           <td scope="row">{{ meal.id }}</td>
-                          <td>{{ meal.name }}</td>
+                          <td><a href="{% url 'restaurant-edit-meal' meal.id %}">{{ meal.name }}</a></td>
                           <td>{{ meal.short_description }}</td>
                           <td>{{ meal.price }}</td>
                           <td class="text-center"><img class="img-rounded"
@@ -40,7 +40,6 @@
         </div>
     </div>
 
-
+   
 
 {% endblock %}
- 
