Add Restaurant Order Status to Order Page

--- a/foodtaskerapp/templates/restaurant/order.html
+++ b/foodtaskerapp/templates/restaurant/order.html
@@ -1,5 +1,5 @@
 {% extends 'restaurant/base.html' %}
- 
+
 {% block page %}
 
     <div class="panel">
@@ -17,6 +17,7 @@
                     <th>Driver</th>
                     <th>Total</th>
                     <th>Status</th>
+                    <th>Action</th>
                   </tr>
                 </thead>
                 <tbody>
@@ -32,7 +33,16 @@
                             <td>{{ order.customer }}</td>
                             <td>{{ order.driver }}</td>
                             <td>{{ order.total }}</td>
-                            <td>{{ order.get_status_display }}</td> 
+                            <td>{{ order.get_status_display }}</td>
+                            <td>
+                                {% if order.status == 1 %}
+                                    <form method="POST">
+                                      {% csrf_token %}
+                                      <input name="id" value="{{ order.id }}" hidden>
+                                      <button class="btn btn-success">Ready</button>
+                                    </form>
+                                {% endif %}
+                            </td>
                         </tr>
                     {% endfor %}
 
@@ -42,3 +52,4 @@
     </div>
 
 {% endblock %}
+  
