--- a/foodtaskerapp/templates/base.html
+++ b/foodtaskerapp/templates/base.html
@@ -3,6 +3,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <title>{% block title %}{% endblock %}</title>
 
   <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
@@ -10,6 +12,8 @@
 
   <script src="{% static 'js/bootstrap.min.js' %}"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+
+  {% block script %}{% endblock %}
 </head>
 <body>
 
@@ -18,11 +22,12 @@
         <div class="col-lg-2 col-md-2 col-sm-2 sidebar">
             {% block sidebar %}{% endblock %}
         </div>
-        <div class="col-lg-10 col-lg-offset-2 col-md-10 col-md-offset-2 col-sm-10 col-sm-offset-2 content">  
+        <div class="col-lg-10 col-lg-offset-2 col-md-10 col-md-offset-2 col-sm-10 col-sm-offset-2 content">
             {% block page %}{% endblock %}
-        </div> 
+        </div>
       </div>
     </div>
 
 </body>
 </html>
+  
