--- a/foodtaskerapp/templates/restaurant/report.html
+++ b/foodtaskerapp/templates/restaurant/report.html
@@ -68,7 +68,42 @@
       </div>
     </div>
   </div>
-  <div class="col-lg-4"></div>
+  <div class="col-lg-4">
+
+    <!-- TOP 3 Meals -->
+    <div class="panel">
+        <div class="panel-heading bg-blue">
+          <h4 class="panel-title text-center text-white">
+              Top 3 Meals
+          </h4>
+        </div>
+        <div class="panel-body">
+            <canvas id="mealChart" height="242"></canvas>
+            <script>
+                var ctx = document.getElementById("mealChart").getContext("2d");
+                var data = {
+                    labels: {{ meal.labels|safe }},
+                    datasets: [
+                        {
+                            backgroundColor: [
+                              "#36A2EB", "#FFCE56", "#FF6384"
+                            ],
+                            data: {{ meal.data }}
+                        }
+                    ]
+                };
+
+                new Chart(ctx, {
+                  type: 'pie',
+                  data: data
+                });
+
+            </script>
+        </div>
+    </div> 
+
+
+  </div>
 </div>
 
 {% endblock %}
