--- a/foodtaskerapp/templates/restaurant/report.html
+++ b/foodtaskerapp/templates/restaurant/report.html
@@ -102,9 +102,40 @@
         </div>
     </div> 
 
+    <!-- TOP 3 Driver ALL TIME -->
+    <div class="panel">
+        <div class="panel-heading bg-blue">
+          <h4 class="panel-title text-center text-white">
+              Top 3 Drivers
+          </h4>
+        </div>
+        <div class="panel-body">
+            <canvas id="driverChart" height="242"></canvas>
+            <script>
+                var ctx = document.getElementById("driverChart").getContext("2d");
+                var data = {
+                    labels: {{ driver.labels|safe }},
+                    datasets: [
+                        {
+                            backgroundColor: [
+                              "#36A2EB", "#FFCE56", "#FF6384"
+                            ],
+                            data: {{ driver.data }}
+                        }
+                    ]
+                };
+
+                new Chart(ctx, {
+                  type: 'pie',
+                  data: data
+                });
+
+            </script>
+        </div>
+    </div>
 
   </div>
 </div>
 
 {% endblock %}
- 
+   
