Refactor driver/customer reports to use Django aggregators

--- a/foodtaskerapp/templates/restaurant/customers.html
+++ b/foodtaskerapp/templates/restaurant/customers.html
@@ -27,7 +27,7 @@
                             </td>
                             <td>{{ customer.user }}</td>
                             <td>{{ customer.address }}</td>
-                            <td>{{ customer.num_orders }}</td>
+                            <td>{{ customer.total_order }}</td>
                         </tr>
                     {% endfor %}
 
