--- a/foodtaskerapp/templates/restaurant/drivers.html
+++ b/foodtaskerapp/templates/restaurant/drivers.html
@@ -27,7 +27,7 @@
                             </td>
                             <td>{{ driver.user }}</td>
                             <td>{{ driver.address }}</td>
-                            <td>{{ driver.num_orders }}</td>
+                            <td>{{ driver.total_order }}</td>
                         </tr>
                     {% endfor %}
 
